--- a/prelogin.html
+++ b/prelogin.html
@@ -1,14 +1,59 @@
 <head>
   <style>
+
+    #buttonlogin{
+      height: 65px; width: 160px;
+      border-radius: 20px;
+      background: #95CD41;
+      border: none;
+      color: white;
+      font-size: 16px;
+    }
+
+    input[type=text], [type=password], [type=email]{
+      height: 10%; width: 75%;
+      margin-bottom: 20px;
+      padding-left: 10px;
+      
+    }
+
+    #tittle{
+      height: 10%; width: 100%;
+      background: gray;
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+    }
+
+    #loginbutton{
+      width: 50%; height: 10%;
+      background: white;
+      border: none;
+      border-bottom: solid 1px gray;
+      font-size: 23px;
+      float: left;
+    }
+
+    #signupbutton{
+      width: 50%; height: 10%;
+      background: white;
+      border: none;
+      border-bottom: solid 1px gray;
+      font-size: 23px;
+      float: left;
+    }
+
     #loginsec { 
       transition: .3s;
       justify-content: center;
       align-content: center;
+      align-items: center;
       display: flex;
       flex-direction: column;
       position: absolute;
       top: 0px; left: 0px;
-      width: 100%; height: 80%;
+      width: 100%; height: 100%;
       background: white;
     }
 
@@ -16,12 +61,13 @@
       transition: .3s;
       justify-content: center;
       align-content: center;
+      align-items: center;
       display: flex;
       flex-direction: column;
       position: absolute;
       top: 0%; left: 100%;
-      width: 100%; height: 80%;
-      background: black;
+      width: 100%; height: 100%;
+      background: whitesmoke;
     }
 
     #placeholder {
@@ -30,16 +76,19 @@
       overflow: hidden;
       position: absolute;
       top: 20%; left: 0%;
-      width: 100%; height: 80%;
-      background: magenta;
+      width: 100%; height: 80%
     }
 
     #loginbox {
       position: absolute;
-      top: 0px; left: 0px;
-      width: 100%; height: 100%;
+      top: 5%; left: 5%;
+      width: 90%; height: 90%;
       z-index: 10;
       background: aqua;
+      border: solid 5px black;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 10px 5px 5px gray;
     }
 
   </style>
@@ -50,21 +99,36 @@
     <input id="password" type="password" name="" id="">
     <button onclick="login()"> Login </button> -->
 
-    <button onclick="slide()">
+    <div id="tittle">
+      let's study
+    </div>
+    <button id="loginbutton" onclick="reverseslide()">
       login
     </button>
-    <button onclick="reverseslide()">
+    <button id="signupbutton" onclick="slide()">
       signup
     </button>
 
   <div id="placeholder"> 
     <div id="loginsec">
-      <input id="username" type="text">
-    <input id="password" type="password" name="" id="">
-    <button onclick="login()"> Login </button>
+      <input id="username" type="text" placeholder="username">
+
+    <input id="password" type="password" name="" id="" placeholder="password">
+
+    <button id="buttonlogin" onclick="login()"> Login </button>
+
     </div>    
     <div id="signupsec">
-      signupsec
+      <input id="email" type="email" name="" id="" placeholder="Email">
+
+      <input id="username" type="text" placeholder="username">
+
+      <input id="password" type="password" name="" id="" placeholder="password">
+
+      <input id="conpassword" type="password" name="" id="" placeholder="Confirm Password">
+  
+      <button id="buttonlogin" onclick="login()"> SignUp </button>
+  
     </div>
   </div>
 </div>
