--- a/prelogin.html
+++ b/prelogin.html
@@ -10,6 +10,15 @@
       font-size: 16px;
     }
 
+    #buttonprelogin{
+      height: 65px; width: 160px;
+      border-radius: 20px;
+      background: #95CD41;
+      border: none;
+      color: white;
+      font-size: 16px;
+    }
+
     input[type=text], [type=password], [type=email]{
       height: 10%; width: 75%;
       margin-bottom: 20px;
@@ -44,6 +53,17 @@
       float: left;
     }
 
+    #preloginbutton{
+      justify-content: center;
+      width: 90px; height: 50px;
+      background: #95CD41;
+      border: none;
+      border-radius: 20px;
+      font-size: 16px;
+      color: whitesmoke;
+      float: left;
+    }
+
     #loginsec { 
       transition: .3s;
       justify-content: center;
@@ -67,7 +87,7 @@
       position: absolute;
       top: 0%; left: 100%;
       width: 100%; height: 100%;
-      background: whitesmoke;
+      background: white;
     }
 
     #placeholder {
@@ -81,18 +101,47 @@
 
     #loginbox {
       position: absolute;
-      top: 5%; left: 5%;
-      width: 90%; height: 90%;
+      top: 5%; left: 60%;
+      width: 450px; height: 600px;
       z-index: 10;
-      background: aqua;
-      border: solid 5px black;
+      background: white;
+      /* display: none; */
+      /* border: solid 5px black; */
       border-radius: 20px;
       overflow: hidden;
-      box-shadow: 10px 5px 5px gray;
+      box-shadow: 0px 5px 15px gray;
+    }
+
+     #itemprelogin{
+      top: 0px; left: 0px;
+      width: 100%; height: 100%;
+      float: left;
+      background: white;
+    }
+
+    #image{
+      position: absolute;
+      top: 15%; left: 3%;
+    }
+
+    #text{
+      border: none;
+      font-size: 24px;
     }
 
   </style>
 </head>
+<div>
+<img id="image" src="pngpict.png">
+<!-- 
+<div id="itemprelogin">
+<textarea name="" id="text" cols="30" rows="5">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id purus odio cursus venenatis, vitae ut arcu quis. 
+</textarea>
+<button id="buttonprelogin" onclick="showlogin()">
+login
+</button>
+</div> -->
 
 <div id="loginbox">
     <div id="tittle">
@@ -127,6 +176,7 @@
   
     </div>
   </div>
+</div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="main.js">
