--- a/prelogin.html
+++ b/prelogin.html
@@ -143,6 +143,7 @@ login
 </button>
 </div> -->
 
+<!-- login section -->
 <div id="loginbox">
     <div id="tittle">
       let's study
@@ -177,6 +178,8 @@ login
     </div>
   </div>
 </div>
+<!-- the end of login section -->
+
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="main.js">
