--- a/prelogin.html
+++ b/prelogin.html
@@ -131,18 +131,8 @@
 
   </style>
 </head>
-<img id="image" src="pict/pngpict.png">
-<!-- 
-<div id="itemprelogin">
-<textarea name="" id="text" cols="30" rows="5">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id purus odio cursus venenatis, vitae ut arcu quis. 
-</textarea>
-<button id="buttonprelogin" onclick="showlogin()">
-login
-</button>
-</div> -->
+<img id="image" src="pict/orang_bingung.jpg">
 
-<!-- login section -->
 <div id="loginbox">
     <div id="tittle">
       let's study
