ini test perbaikan

--- a/prelogin.html
+++ b/prelogin.html
@@ -131,7 +131,7 @@
 
   </style>
 </head>
-<img id="image" src="pict/orang_bingung.jpg">
+<img id="image" src="pict/pngpict.png">
 
 <div id="loginbox">
     <div id="tittle">
