--- a/prelogin.html
+++ b/prelogin.html
@@ -172,6 +172,6 @@
   </div>
 </div>
 <!-- the end of login section -->
-<script src="/socket.io/socket.io.js"></script>
+<!-- <script src="/socket.io/socket.io.js"></script> -->
 <script src="main.js">
 </script>
