--- a/statistik.html
+++ b/statistik.html
@@ -24,47 +24,49 @@
 
 <body>
     <section>
-        
+
     </section>
-    <div id = "nav-desktop">
+    <div id="nav-desktop">
+        <!-- create a navbar with bootstrap 5 -->
+        <div class="d-flex justify-content-center ">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mt-3 sticky-top bg-body rounded-pill">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">LetsStudy</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarScroll">
+                        <ol class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
+                            style="--bs-scroll-height: 100px;">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Report</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Statistic</a>
+                            </li>
+                            <!--logo orang-->
+                            <li class="nav-item">
+                                <a class="navbar-link d-inline-flex p-1 bd-highlight" href="#">
+                                    <img class="rounded-pill me-sm-3" src="pict/gambar avatar.png" alt="" width="30"
+                                        height="30">
+                                </a>
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!-- the end of navbar with bootstrap 5 -->
 
     </div>
-    <!-- create a navbar with bootstrap 5 -->
-    <div class="d-flex justify-content-center ">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mt-3 sticky-top bg-body rounded">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">LetsStudy</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ol class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Report</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Statistic</a>
-                        </li>
-                        <!--logo orang-->
-                        <li class="nav-item">
-                            <a class="navbar-link d-inline-flex p-1 bd-highlight" href="#">
-                                <img class="rounded-pill me-sm-3" src="pict/gambar avatar.png" alt="" width="30"
-                                    height="30">
-                            </a>
-                        </li>
-                    </ol>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <!-- the end of navbar with bootstrap 5 -->
 
 </body>
 
