--- a/statistik.html
+++ b/statistik.html
@@ -3,6 +3,8 @@
 
 <head>
     <!--link link to css and js-->
+    <!--import css-->
+    <link rel="stylesheet" href="statistik.css">
     <!--cdn bootstrap 5 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
@@ -41,7 +43,7 @@
                         <ol class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
                             style="--bs-scroll-height: 100px;">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link " aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Report</a>
@@ -50,12 +52,12 @@
                                 <a class="nav-link" href="#">Courses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Statistic</a>
+                                <a class="nav-link active" href="#">Statistic</a>
                             </li>
                             <!--logo orang-->
                             <li class="nav-item">
                                 <a class="navbar-link d-inline-flex p-1 bd-highlight" href="#">
-                                    <img class="rounded-pill me-sm-3" src="pict/gambar avatar.png" alt="" width="30"
+                                    <img class="rounded-pill me-sm-3" src="pict/profile.png" alt="" width="30"
                                         height="30">
                                 </a>
                             </li>
