--- a/statistik.html
+++ b/statistik.html
@@ -25,9 +25,6 @@
 </head>
 
 <body>
-    <section>
-
-    </section>
     <div id="nav-desktop">
         <!-- create a navbar with bootstrap 5 -->
         <div class="d-flex justify-content-center ">
@@ -69,7 +66,12 @@
         <!-- the end of navbar with bootstrap 5 -->
 
     </div>
-
+    <!--section 1-->    
+        <div id="judul" class="bg-warning">
+            I'm a flexbox container
+        </div>
+    
+    <!--end of section 1-->
 </body>
 
 </html>
