--- a/statistik.html
+++ b/statistik.html
@@ -25,14 +25,13 @@
 </head>
 
 <body>
-    <header class="sticky-top py-2 px-5 justify-content-start">
-        <nav id= "nav"class="navbar shadow w-75 h-50 d-inline-block border  navbar-expand-lg rounded-pill">
-            <div class="container-fluid ">
+    <header class="container sticky-top py-2 d-flex justify-content-center ">
+        <nav id= "nav"class="navbar navbar-light shadow w-75 h-50 d-inline-block border navbar-expand-lg rounded-pill">
+            <div class="container">
                 <div class="navbar-collapse">
                     <!-- Navbar brand -->
-                    <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                        <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="15"
-                            alt="MDB Logo" />
+                    <a class="navbar-brand mx-2 mt-lg-0" href="#">
+                        LetsStudy
                     </a>
                     <!-- end of Navbar brand -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
