--- a/statistik.html
+++ b/statistik.html
@@ -26,7 +26,7 @@
 
 <body>
     <header class="container sticky-top py-2 d-flex justify-content-center ">
-        <nav id= "nav"class="navbar navbar-light shadow w-75 h-50 d-inline-block border navbar-expand-lg rounded-pill">
+        <nav id="nav" class="navbar nav-pills navbar-light shadow w-75 h-50 d-inline-block border navbar-expand-lg rounded-pill">
             <div class="container">
                 <div class="navbar-collapse">
                     <!-- Navbar brand -->
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="#">Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link active" href="#">Projects</a>
                         </li>
                     </ul>
                 </div>
@@ -58,14 +58,19 @@
     <main>
         <!--section 1-->
         <section class="">
-            <div id="judul" class=" container bg-danger my-4">
-                <div class="row justify-content-md-center">
-                    <div class="col col-lg-2">
-                        <h4 class="text-start fw-bold fs-1">kas</h4>
-                        <p class="text-start fw-bold fs-1">kas</p>
-                    </div>
-                    <div class ="clearfix">
-                        <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" alt="">
+            <div id="judul" class=" container bg-danger my-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <p class="fw-bold">Statistik</p>
+                            <p class="fw-bold">Mari kita lihat apa aja sih yang 
+                                kamu lakukan dalam Minggu ini</p>
+                        </div>
+                        <div class="col-6 col-md-4">
+                            <h1 class="text-center">
+                                Statistik
+                            </h1>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -80,32 +85,40 @@
                 <div class="row g-4">
                     <div class="col-6" id="note-note">
                         <div class="p-3 border bg-light">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus nisi,
-                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo unde
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus
+                                nisi,
+                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo
+                                unde
                                 aspernatur? Quidem voluptatum illo error commodi.</p>
                             <p>by otak mesum</p>
                         </div>
                     </div>
                     <div class="col-6" id="note-note">
                         <div class="p-3 border bg-light">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus nisi,
-                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo unde
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus
+                                nisi,
+                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo
+                                unde
                                 aspernatur? Quidem voluptatum illo error commodi.</p>
                             <p>by otak mesum</p>
                         </div>
                     </div>
                     <div class="col-6" id="note-note">
                         <div class="p-3 border bg-light">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus nisi,
-                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo unde
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus
+                                nisi,
+                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo
+                                unde
                                 aspernatur? Quidem voluptatum illo error commodi.</p>
                             <p>by otak mesum</p>
                         </div>
                     </div>
                     <div class="col-6" id="note-note">
                         <div class="p-3 border bg-light">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus nisi,
-                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo unde
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vitae repellendus
+                                nisi,
+                                ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo
+                                unde
                                 aspernatur? Quidem voluptatum illo error commodi.</p>
                             <p>by otak mesum</p>
                         </div>
