--- a/statistik.html
+++ b/statistik.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <header class="container sticky-top py-2 d-flex justify-content-center ">
+    <header class="container sticky-top p-2 d-flex justify-content-center ">
         <nav id="nav" class="navbar nav-pills navbar-light shadow w-75 h-50 d-inline-block border navbar-expand-lg rounded-pill">
             <div class="container">
                 <div class="navbar-collapse">
@@ -58,18 +58,16 @@
     <main>
         <!--section 1-->
         <section class="">
-            <div id="judul" class=" container bg-danger my-2">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <p class="fw-bold">Statistik</p>
-                            <p class="fw-bold">Mari kita lihat apa aja sih yang 
+            <div id="judul" class=" container bg-danger my-2 gx-3">
+                <div class="container position-relative">
+                    <div class="row row-cols-3 ">
+                        <div class="col-9 col-md-6 col align-self-center">
+                            <p class="">Statistik</p>
+                            <p class="my-5">Mari kita lihat apa aja sih yang 
                                 kamu lakukan dalam Minggu ini</p>
                         </div>
-                        <div class="col-6 col-md-4">
-                            <h1 class="text-center">
-                                Statistik
-                            </h1>
+                        <div class="float-end">
+                            <img src="pict/pngpict.png"/>
                         </div>
                     </div>
                 </div>
