--- a/statistik.html
+++ b/statistik.html
@@ -36,13 +36,16 @@
                     <!-- end of Navbar brand -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Dashboard</a>
+                            <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Team</a>
+                            <a class="nav-link" href="#">Home Work</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Projects</a>
+                            <a class="nav-link" href="#">Course</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active rounded-pill" href="#">Statistic</a>
                         </li>
                     </ul>
                 </div>
