--- a/statistik.html
+++ b/statistik.html
@@ -61,7 +61,7 @@
     <main>
         <!--section 1-->
         <section class="">
-            <div id="judul" class=" container bg-danger my-2 gx-3">
+            <div id="section1" class="container">
                 <div class="container position-relative">
                     <div class="row row-cols-3 ">
                         <div class="col-9 col-md-6 col align-self-center">
