--- a/statistik.html
+++ b/statistik.html
@@ -121,7 +121,7 @@
                                 ab temporibus mollitia numquam incidunt obcaecati aperiam tempora nihil provident illo
                                 unde
                                 aspernatur? Quidem voluptatum illo error commodi.</p>
-                            <p>by otak mesum</p>
+                            <p>by otak mesumaaa</p>
                         </div>
                     </div>
                 </div>
