--- a/statistik.html
+++ b/statistik.html
@@ -3,9 +3,7 @@
 
 <head>
     <!--link link to css and js-->
-    <link href="vendor/aos/aos.css" rel="stylesheet">
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+
     <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> 
@@ -13,21 +11,21 @@
     <!--import css-->
     <link rel="stylesheet" href="statistik.css">
 
-    <!--cdn bootstrap 5 -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-        integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <!--cdn bootstrap 5 --> 
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <!--the end of cdn bootstrap5-->
+
     <!-- aos cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link href="vendor/aos/aos.css" rel="stylesheet"> 
     <!-- the end of cdn aos -->
+
     <!--cdn Jquery-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
     <!--the end of cdn Jquery-->
-    <script src="statistik.js"></script>
+    
 
     <!--the end of link link to css and js-->
 
@@ -65,9 +63,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 d-flex flex-column justify-content-center">
-                        <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-                        <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites
-                            with Bootstrap</h2>
+                        <h1 data-aos="fade-up">Statistik</h1>
+                        <h2 data-aos="fade-up" data-aos-delay="400">Apa aja sih tugas yang udah nungguin kamu </h2>
                         <div data-aos="fade-up" data-aos-delay="600">
                             <div class="text-center text-lg-start">
                                 <a href="#about"
@@ -138,12 +135,24 @@
     <!-- back to top -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     <!-- end of back to top -->
+
     <!-- footer  -->
     <footer class="footer mt-auto py-3">
         <div class="container">
             <span class="text-muted">&copy; 2020 LetsStudy</span>
         </div>
-        <!-- end of footer -->
+    </footer>
+    <!-- end of footer -->
+
+    <script src="vendor/purecounter/purecounter.js"></script>
+    <script src="vendor/aos/aos.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="vendor/php-email-form/validate.js"></script>
+    <script src="statistik.js"></script>
+
 </body>
 
 </html>
