--- a/statistik.html
+++ b/statistik.html
@@ -69,7 +69,7 @@
                             <div class="text-center text-lg-start">
                                 <a href="#about"
                                     class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                                    <span>Get Started</span>
+                                    <span>GAS LIAT LAH </span>
                                     <i class="bi bi-arrow-right"></i>
                                 </a>
                             </div>
