--- a/statistik.html
+++ b/statistik.html
@@ -46,9 +46,8 @@
                 <ul>
                     <li><a class="nav-link scrollto" href="#home">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
                     <li><a class="nav-link scrollto active">Statistik</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                    <li><a class="nav-link scrollto" href="/HomeWork/homework.html">HomeWork</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
