--- a/HomeWork/homework.html
+++ b/HomeWork/homework.html
@@ -45,8 +45,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto" href="#home">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
+                    <li><a class="nav-link scrollto" href="#course">Course</a></li>
                     <li><a class="nav-link scrollto" href="/statistik.html">Statistik</a></li>
                     <li><a class="nav-link scrollto active">HomeWork</a></li>
                     <li><a href="blog.html">Blog</a></li>
