--- a/statistik.html
+++ b/statistik.html
@@ -89,7 +89,7 @@
                 <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
               </div>
 
-              <div class="row g-4">
+              <div class="row d-flex align-items-center g-4">
                 <div class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
                   <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                     <h4 class="title"><p>Kamil-Trex</p></h4>
