--- a/statistik.html
+++ b/statistik.html
@@ -87,8 +87,7 @@
                     <h2>Note From Kamil-Trex</h2>
                     <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
                 </div>
-
-                <div class="row  d-flex justify-content-center  g-4">
+                <div class="row mb-5 d-flex justify-content-center  g-4">
                     <div class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                             <h4 class="title">
@@ -128,9 +127,7 @@
                                 blanditiis</p>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </section>
     </main>
