--- a/statistik.html
+++ b/statistik.html
@@ -83,7 +83,7 @@
 
         <section id="services" class="services">
             <div class="container">
-                <div class="section-title" data-aos="fade-up">
+                <div class="section-title mt-5" data-aos="fade-up">
                     <h2>Note From Kamil-Trex</h2>
                     <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
                 </div>
