--- a/prelogin.html
+++ b/prelogin.html
@@ -9,6 +9,15 @@
       font-size: 16px;
     }
 
+    #buttonregister{
+      height: 65px; width: 160px;
+      border-radius: 20px;
+      background: #95CD41;
+      border: none;
+      color: white;
+      font-size: 16px;
+    }
+
     #buttonprelogin{
       height: 65px; width: 160px;
       border-radius: 20px;
@@ -146,7 +155,7 @@
       <input id="usernameS" type="text" name="username" placeholder="username">
       <input id="passwordS" type="password" name="password" placeholder="password">
       <input id="conpassword" type="password" name="conpassword" placeholder="Confirm Password">
-      <button id="buttonlogin" onclick="login()"> SignUp </button>
+      <button id="buttonregister" onclick="login()"> SignUp </button>
     </div>
   </div>
 </div>
