--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
         #header{
             background: #EEC373;
             height:60%; width: 100%;
+            /* background: black; */
             overflow: hidden;
         }
         #profilepict{
@@ -128,6 +129,7 @@
         #contentpremium{
             position: relative;
             font-size: 20px;
+            /* background: black; */
             width: 90%;
             top: 20%; left: 5%;
         }
@@ -248,3 +250,6 @@ Riwayat Pembelian
     </div>
 </div>
 </div>
+<script src="/socket.io/socket.io.js"></script>
+<script src="profile.js">
+</script>
