--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -1,8 +1,36 @@
 <head>
     <link rel="stylesheet" href="/Profile/profile.css">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LetsStudy</title>
 </head>
-<div id="header">
-    <img src="pict/sample.png" alt="profile pict" id="profilepict">
+<header id="header" class="header fixed-top">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+        <a href="index.html" class="logo d-flex align-items-center">
+            <span>LetsStudy</span>
+        </a>
+        <nav id="navbar" class="navbar">
+            <ul>
+                <li><a class="nav-link scrollto" href="#home">Home</a></li>
+                <li><a class="nav-link scrollto" href="#course">Course</a></li>
+                <li><a class="nav-link scrollto" href="/Statistik/statistik.html">Statistik</a></li>
+                <li><a class="nav-link scrollto" href="/HomeWork/homework.html">HomeWork</a></li>
+                <li><a class="nav-link scrollto active">Profile</a></li>
+            </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
+        <!--navbar -->
+    </div>
+</header>
+<div id="headers">
+
+    
+
+    <img src="pict/sample.jpg" alt="profile pict" id="profilepict">
     <div id="profilename">
         RIZKI KAMIL
     </div>
@@ -38,7 +66,7 @@
 </div>
 <div id="premium">
     <div id="premiumone">
-        <img id="imgdiamond" src="pict/diamond.png" alt="">
+        <img id="imgdiamond" src="pict/diamond.jpg" alt="">
         <div id="text">
             PREMIUM PLAN
         </div>
@@ -71,7 +99,7 @@
         </div>
     </div>
     <div id="premiumone">
-        <img id="imgdiamond" src="pict/settings.png" alt="">
+        <img id="imgdiamond" src="pict/settings.jpg" alt="">
         <div id="text">
             PENGATURAN UMUM
         </div>
