--- a/HomeWork/homework.html
+++ b/HomeWork/homework.html
@@ -46,8 +46,9 @@
                 <ul>
                     <li><a class="nav-link scrollto" href="#home">Home</a></li>
                     <li><a class="nav-link scrollto" href="#course">Course</a></li>
-                    <li><a class="nav-link scrollto" href="/statistik.html">Statistik</a></li>
+                    <li><a class="nav-link scrollto" href="/Statistik/statistik.html">Statistik</a></li>
                     <li><a class="nav-link scrollto active">HomeWork</a></li>
+                    <li><a class="nav-link scrollto" href="/Profile/profile.html">Profile</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
