--- a/Statistik/statistik.html
+++ b/Statistik/statistik.html
@@ -4,20 +4,20 @@
 <head>
     <!--link link to css and js-->
 
-    <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!--import css-->
-    <link rel="stylesheet" href="statistik.css">
+    <link rel="stylesheet" href="/Statistik/statistik.css">
 
     <!--cdn bootstrap 5 -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <!--the end of cdn bootstrap5-->
 
     <!-- aos cdn -->
-    <link href="vendor/aos/aos.css" rel="stylesheet">
+    <link href="/vendor/aos/aos.css" rel="stylesheet">
     <!-- the end of cdn aos -->
 
     <!--cdn Jquery-->
@@ -48,6 +48,7 @@
                     <li><a class="nav-link scrollto" href="#course">Course</a></li>
                     <li><a class="nav-link scrollto active">Statistik</a></li>
                     <li><a class="nav-link scrollto" href="/HomeWork/homework.html">HomeWork</a></li>
+                    <li><a class="nav-link scrollto" href="/Profile/profile.html">Profile</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -144,14 +145,14 @@
     </footer>
     <!-- end of footer -->
 
-    <script src="vendor/purecounter/purecounter.js"></script>
-    <script src="vendor/aos/aos.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="vendor/php-email-form/validate.js"></script>
-    <script src="statistik.js"></script>
+    <script src="/vendor/purecounter/purecounter.js"></script>
+    <script src="/vendor/aos/aos.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/vendor/php-email-form/validate.js"></script>
+    <script src="/Statistik/statistik.js"></script>
 
 </body>
 
