--- a/Home/Home.html
+++ b/Home/Home.html
@@ -9,7 +9,7 @@
     <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> 
     
     <!--import css-->
-    <link rel="stylesheet" href="/HomeWork/homework.css">
+    <link rel="stylesheet" href="/Home/Home.css">
 
     <!--cdn bootstrap 5 --> 
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,10 +44,10 @@
             </a>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto" href="/Home/Home.html">Home</a></li>
+                    <li><a class="nav-link scrollto active">Home</a></li>
                     <li><a class="nav-link scrollto" href="/Course/Course.html">Course</a></li>
                     <li><a class="nav-link scrollto" href="/Statistik/statistik.html">Statistik</a></li>
-                    <li><a class="nav-link scrollto active">HomeWork</a></li>
+                    <li><a class="nav-link scrollto" href="/Home/Home.html">HomeWork</a></li>
                     <li><a class="nav-link scrollto" href="/Profile/profile.html">Profile</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -101,7 +101,7 @@
     <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="/vendor/php-email-form/validate.js"></script>
-    <script src="/HomeWork/homework.js"></script>
+    <script src="/Home/Home.js"></script>
 
 </body>
 
