--- a/Statistik/statistik.html
+++ b/Statistik/statistik.html
@@ -44,8 +44,8 @@
             </a>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto" href="#home">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#course">Course</a></li>
+                    <li><a class="nav-link scrollto" href="/Home/Home.html">Home</a></li>
+                    <li><a class="nav-link scrollto" href="/Course/Course.html">Course</a></li>
                     <li><a class="nav-link scrollto active">Statistik</a></li>
                     <li><a class="nav-link scrollto" href="/HomeWork/homework.html">HomeWork</a></li>
                     <li><a class="nav-link scrollto" href="/Profile/profile.html">Profile</a></li>
