--- a/main_menu/index.html
+++ b/main_menu/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Let's Study</title>
     <link rel="stylesheet" href="style.css" class="css">
 </head>
+
 <body>
     <!--navbar-->
     <nav>
@@ -33,29 +35,19 @@
                 <p>belajar untuk persiapan ulangan sekolah, UTBK, AKM, dan Ujian Mandiri</p>
             </div>
         </div>
-        <img src="https://img.freepik.com/free-vector/teacher-student-concept-illustration_114360-7905.jpg?w=1800" alt="hero">
+        <img src="https://img.freepik.com/free-vector/teacher-student-concept-illustration_114360-7905.jpg?w=1800"
+            alt="hero">
     </section>
-    
+
     <!--container 2-->
     <section class="container2">
         <div>
             <div>
                 <h2>We Have New Program!!!</h2>
-                <p>Bekerja sama dengan partner, kami menyelenggarakan beberapa program untuk mendukung Siswa-siswa terbaik Indonesia.</p>
+                <p>Bekerja sama dengan partner, kami menyelenggarakan beberapa program untuk mendukung Siswa-siswa
+                    terbaik Indonesia.</p>
             </div>
         </div>
-
-        <div class="card-wrap">
-        <div class="card">
-            <div class="card-body">
-                <img src="https://as1.ftcdn.net/v2/jpg/03/30/50/64/1000_F_330506467_754t5bDeh6Koob55vhiuS06MTnZVB9s9.jpg" 
-                 alt="">
-                <p>Brand Ambasador</p>
-                <h2>AMBIS! AMBIS! AMBIS! Gagal SBM!</h2>
-                <p1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum veniam quas, aliquid hic iure porro quis sit sunt id unde</p1>
-            </div>
-        </div>
-    </div>
     </section>
 
     <!--container 3-->
@@ -68,4 +60,5 @@
     </section>
 
 </body>
+
 </html>
