--- a/HomeWork/homework.html
+++ b/HomeWork/homework.html
@@ -84,12 +84,12 @@
         <!-- section 2 -->
             <section id="section" class="services">
                 <div class="container">
-                    <div class="section-title " data-aos="fade-up">
+                    <div class=" " data-aos="fade-up">
                         <h2>Task Form your fucking teachers</h2>
                         <p>Kerjain sampe tipes</p>
                     </div>
 
-                    <div class="row mb-5 mt-2 d-flex justify-content-center  g-4">
+                    <div class="row mb-5 mt-2 d-flex justify-content-center g-4">
                         <div class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
                             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                                 <h4 class="title">
