--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -10,7 +10,7 @@
 </head>
 <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
+        <a href="/Home/Home.html" class="logo d-flex align-items-center">
             <span>LetsStudy</span>
         </a>
         <nav id="navbar" class="navbar">
@@ -28,7 +28,7 @@
 </header>
 <div id="headers">
 
-    
+
 
     <img src="pict/sample.jpg" alt="profile pict" id="profilepict">
     <div id="profilename">
