--- a/Home/Home.html
+++ b/Home/Home.html
@@ -182,17 +182,6 @@
                 </div>
 
                 <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col-secfour" data-aos="fade-right" data-aos-delay="500">
-                      <div class="card h-100"> 
-                        <div class="card-body">
-                          <h5 class="card-title-secfour-a">Card title</h5>
-                          <p class="card-text-secfour-a">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                          <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                      </div>
-                    </div>
 
                     <div class="col-secfour" data-aos="fade-up" data-aos-delay="500">
                       <div class="card h-100">                        
@@ -201,8 +190,9 @@
                           <p class="card-text-secfour-a">This card has supporting text below as a natural lead-in to additional content.</p>
 
                           <div class="list-secfour">
-                            <ul class="list-group-secfour">
-                                <li class="list-group-item" style="border: none;">An item</li>
+                            <ul class="li-secfour-group">
+                            
+                                <li class="list-group-item" style="border: none;" >An item</li>
                                 <li class="list-group-item" style="border: none;">A second item</li>
                                 <li class="list-group-item" style="border: none;">A third item</li>
                                 <li class="list-group-item" style="border: none;">A fourth item</li>
@@ -211,24 +201,12 @@
                           </div>
                         </div>
                         <div class="card-footer">
-                          <small class="text-muted">Last updated 3 mins ago</small>
+                            <p class="text-foot">Mulai dari</p>
+                            <p class="text-bold">Rp. 1.000.000/bulan</p>
+                           
                         </div>
                       </div>
                     </div>
-
-                    <div class="col-secfour" data-aos="fade-left" data-aos-delay="500">
-                      <div class="card h-100">                        
-                        <div class="card-body">
-                          <h5 class="card-title-secfour-a">Card title</h5>
-                          <p class="card-text-secfour-a">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        </div>
-                        <div class="card-footer">
-                          <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
             </div>
         </section>
 
