--- a/HomeWork/homework.html
+++ b/HomeWork/homework.html
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="row mb-5 mt-2 d-flex justify-content-center g-4">
-                        <div class="col-md-6 col-lg-5 d-flex align-items-stretch mb-5 mb-lg-0">
+                        <div class="col-md-6 d-flex align-items-stretch">
                             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                                 <h4 class="title d-flex justify-content-center">
                                     <p>Bahasa Inggris</p>
